--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </div>
 
           <div class="rounded-2xl overflow-hidden border border-gray-100 shadow-sm">
-            <iframe src="https://www.google.com/maps?q=Golden+Plaza+Añasco+Puerto+Rico&output=embed"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3788.0990277979363!2d-67.14564268833911!3d18.297078975889228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c02b1003b772b93%3A0xff8082d9ff528728!2sDr.%20Adalberto%20Echevarr%C3%ADa%20Feliciano!5e0!3m2!1sen!2sus!4v1762201036457!5m2!1sen!2sus=embed"
               class="w-full h-56 md:h-64 border-0" loading="lazy" title="Mapa - Golden Plaza Añasco"></iframe>
           </div>
         </div>
