--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="bg-white p-8 rounded-2xl shadow hover:shadow-lg transition">
           <h4 class="font-semibold text-blue-800 mb-3" data-i18n="service.weight.title">Control de Peso</h4>
-          <p data-i18n="service.weight.desc">Asesoramiento médico y nutricional para un estilo de vida saludable. Trabajamos GLP1 y GIP</p>
+          <p data-i18n="service.weight.desc">Asesoramiento médico y nutricional para un estilo de vida saludable. Trabajamos GLP-1 y GIP.</p>
         </div>
         <div class="bg-white p-8 rounded-2xl shadow hover:shadow-lg transition">
           <h4 class="font-semibold text-blue-800 mb-3" data-i18n="service.home.title">Visitas al Hogar</h4>
@@ -283,7 +283,9 @@
         "contact.infoTitle":"Información","contact.address":"Golden Plaza #3","contact.addressLine":"Carretera 402 KM 2.1, Bo. Marías, Añasco, PR",
         "contact.phone":"+1 (939) 699-6336","contact.phoneNote":"Llamadas y SMS","contact.email":"adalbertoechevarriamd@gmail.com","contact.emailNote":"Correo para documentos",
         "form.name":"Nombre","form.phone":"Teléfono","form.email":"Correo electrónico","form.message":"Mensaje","form.submit":"Enviar mensaje",
-        "footer.copy":"© 2025 Clínica del Dr. Adalberto Echevarría Feliciano","footer.facebook":"Facebook"
+        "footer.copy":"© 2025 Clínica del Dr. Adalberto Echevarría Feliciano","footer.facebook":"Facebook",
+        "contact.consent":"Autorizo el uso de mis datos para gestionar la cita.",
+        "contact.privacy":"Al enviar aceptas que nos comuniquemos por los medios indicados. No compartimos tus datos."
       },
       en: {
         "meta.title":"Dr. Adalberto Echevarría Feliciano | Medical Clinic in Añasco",
