--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="es"> <!-- cambiado a "es" para que por defecto arranque en español -->
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dr. Adalberto Echevarría Feliciano | Clínica Médica en Añasco</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="doctor-icon.png">
-  <style>
-    html { scroll-behavior: smooth; }
-    .fade-in { animation: fadeIn 1s ease-in-out; }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
-</head>
-<body class="bg-gray-50 text-gray-800 font-sans">
 
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Swiper.js -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- Icon -->
+  <link rel="icon" href="doctor-icon.png">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
+<body class="bg-gray-50 text-gray-800 font-sans">
   <!-- NAVBAR -->
   <header class="fixed top-0 left-0 w-full bg-white/80 backdrop-blur-md shadow-sm z-50">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
@@ -30,13 +33,8 @@
         <a href="#contacto" data-i18n="nav.contact" class="hover:text-blue-600">Contacto</a>
       </nav>
 
-      <!-- Llamar + selector de idioma -->
       <div class="flex items-center gap-4">
-        <a href="tel:+19396996336" data-i18n="call" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm hover:bg-blue-600">
-          Llamar
-        </a>
-
-        <label for="lang-select" class="sr-only">Idioma</label>
+        <a href="tel:+19396996336" data-i18n="call" class="bg-blue-700 text-white px-4 py-2 rounded-lg text-sm hover:bg-blue-600">Llamar</a>
         <select id="lang-select" class="bg-white border rounded-md text-sm px-2 py-1">
           <option value="es">ES</option>
           <option value="en">EN</option>
@@ -45,7 +43,6 @@
     </div>
   </header>
 
-  <!-- HERO -->
   <section id="inicio" class="pt-24 relative bg-gradient-to-b from-blue-100 to-white">
     <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center py-16 fade-in">
       <div class="md:w-1/2 mb-10 md:mb-0">
@@ -120,9 +117,9 @@
     </div>
   </section>
 
-  <!-- NUEVAS SECCIONES: HORARIOS Y MÉTODOS DE PAGO -->
   <section class="max-w-6xl mx-auto px-6 py-12">
     <div class="grid md:grid-cols-2 gap-8">
+
       <!-- HORARIOS -->
       <section id="horarios" class="bg-white rounded-2xl p-8 shadow">
         <h3 class="text-2xl font-bold text-sky-800 mb-4" data-i18n="hours.title">🕒 Horarios de Atención</h3>
@@ -156,7 +153,7 @@
     </div>
   </section>
 
-<!-- GALERÍA MODERNA -->
+<!-- GALERÍA -->
 <section id="galeria" class="py-20 bg-white">
   <div class="max-w-6xl mx-auto px-6">
     <h3 class="text-3xl font-semibold text-center text-blue-900 mb-10" data-i18n="gallery.title">Nuestras Instalaciones</h3>
@@ -188,226 +185,6 @@
     </div>
   </div>
 </section>
-
-<!-- Swiper.js -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-<script>
-  const swiper = new Swiper(".myGallery", {
-    loop: true,
-    autoplay: {
-      delay: 2500,
-      disableOnInteraction: false,
-    },
-    slidesPerView: 1,
-    spaceBetween: 20,
-    breakpoints: {
-      640: { slidesPerView: 2 },
-      1024: { slidesPerView: 3 },
-    },
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev",
-    },
-  });
-</script>
-
-<style>
-  .swiper-slide img {
-    width: 100%;
-    height: 320px;
-    object-fit: cover;
-    border-radius: 1rem;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-    transition: transform 0.3s ease;
-  }
-
-  .swiper-slide img:hover {
-    transform: scale(1.05);
-  }
-
-  .swiper-button-next,
-  .swiper-button-prev {
-    color: #1e3a8a; /* Azul */
-  }
-
-  .swiper-pagination-bullet-active {
-    background: #1e3a8a;
-  }
-</style>
-
-
-<!-- Swiper.js -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-<!-- i18n script (reemplazado: usa preferencia guardada o 'es' por defecto; no fuerza 'en') -->
-<script>
-  (function(){
-    const translations = {
-      es: {
-        "meta.title":"Dr. Adalberto Echevarría Feliciano | Clínica Médica en Añasco",
-        "nav.home":"Inicio","nav.about":"Sobre","nav.services":"Servicios","nav.gallery":"Galería","nav.team":"Equipo","nav.contact":"Contacto",
-        "call":"Llamar",
-        "hero.title":"Medicina primaria, preventiva y empática en Añasco. <br>Tu Salud es nuestra prioridad!",
-        "hero.desc":"Atención médica integral con enfoque en la prevención, el bienestar y el trato personal.",
-        "hero.cta":"Agendar cita",
-        "about.title":"Sobre Nosotros",
-        "about.text":"En la clínica del Dr. Adalberto Echevarría Feliciano nos dedicamos a cuidar la salud de la comunidad con servicios accesibles, profesionales y humanos. Creemos en la medicina preventiva y en la cercanía con nuestros pacientes.",
-        "mission.title":"Misión","mission.text":"Brindar atención médica integral y preventiva centrada en la salud y bienestar de cada paciente.",
-        "vision.title":"Visión","vision.text":"Ser un modelo de excelencia médica en el área oeste de Puerto Rico.",
-        "values.title":"Valores","values.text":"Respeto, empatía, ética, compromiso y profesionalismo en cada consulta.",
-        "services.title":"Servicios Médicos",
-        "service.primary.title":"Medicina Primaria","service.primary.desc":"Evaluación y manejo integral de la salud familiar y condiciones crónicas.",
-        "service.surgery.title":"Cirugía Menor","service.surgery.desc":"Procedimientos ambulatorios simples con tecnología moderna y esterilización completa.",
-        "service.tele.title":"Telemedicina","service.tele.desc":"Consultas médicas seguras desde tu hogar con video o llamada telefónica.",
-        "service.certs.title":"Certificados Médicos","service.certs.desc":"Certificados de salud, matrimonio y licencias de conducir.",
-        "service.weight.title":"Control de Peso","service.weight.desc":"Asesoramiento médico y nutricional para un estilo de vida saludable. Trabajamos GLP1 y GIP",
-        "service.home.title":"Visitas al Hogar","service.home.desc":"Atención personalizada en la comodidad de tu residencia.",
-        "hours.title":"🕒 Horarios de Atención","hours.desc":"Visítanos en nuestros horarios regulares. También contamos con teleconsultas por cita previa.",
-        "hours.monthu":"<strong>Lunes a Jueves:</strong> 8:00 am — 4:00 pm","hours.fri":"<strong>Viernes:</strong> 8:00 am — 3:00 pm","hours.sat":"<strong>Sábado:</strong> 8:00 am — 12:00 pm",
-        "payments.title":"💳 Métodos de Pago","payments.desc":"Aceptamos la mayoría de los planes médicos, incluyendo Plan Vital. Consulte si su plan está cubierto.",
-        "payment.cash.title":"Efectivo","payment.cash.desc":"Pagos directos en oficina.",
-        "payment.transfer.title":"Transferencias","payment.transfer.desc":"ATH Móvil y Zelle disponibles.",
-        "payment.card.title":"Tarjetas","payment.card.desc":"Visa, MasterCard, American Express y Discover.",
-        "gallery.title":"Nuestras Instalaciones",
-        "gallery.alt1":"Recepción","gallery.alt2":"Sala de Espera","gallery.alt3":"Área de Consulta","gallery.alt4":"Área de Procedimientos","gallery.alt5":"Fachada","gallery.alt6":"Área Administrativa",
-        "team.title":"Nuestro Equipo","team.desc":"Profesionales comprometidos con la atención humana y de calidad para toda la familia.",
-        "role.doctor":"Médico General","role.nurse":"RN, BSN","role.admin":"Asistente Administrativo",
-        "contact.title":"Contacto","contact.desc":"Agenda tu cita o envíanos tu consulta. Respuesta en menos de 24 horas laborables.",
-        "contact.infoTitle":"Información","contact.address":"Golden Plaza #3","contact.addressLine":"Carretera 402 KM 2.1, Bo. Marías, Añasco, PR",
-        "contact.phone":"+1 (939) 699-6336","contact.phoneNote":"Llamadas y SMS","contact.email":"adalbertoechevarriamd@gmail.com","contact.emailNote":"Correo para documentos",
-        "form.name":"Nombre","form.phone":"Teléfono","form.email":"Correo electrónico","form.message":"Mensaje","form.submit":"Enviar mensaje",
-        "footer.copy":"© 2025 Clínica del Dr. Adalberto Echevarría Feliciano","footer.facebook":"Facebook",
-        "contact.consent":"Autorizo el uso de mis datos para gestionar la cita.",
-        "contact.privacy":"Al enviar aceptas que nos comuniquemos por los medios indicados. No compartimos tus datos."
-      },
-      en: {
-        "meta.title":"Dr. Adalberto Echevarría Feliciano | Medical Clinic in Añasco",
-        "nav.home":"Home","nav.about":"About","nav.services":"Services","nav.gallery":"Gallery","nav.team":"Team","nav.contact":"Contact",
-        "call":"Call",
-        "hero.title":"Primary, preventive and empathetic medicine in Añasco. <br>Your health is our priority!",
-        "hero.desc":"Comprehensive medical care focused on prevention, wellbeing and personal attention.",
-        "hero.cta":"Book appointment",
-        "about.title":"About us",
-        "about.text":"At Dr. Adalberto Echevarría Feliciano's clinic we care for the community with accessible, professional and human services. We believe in preventive medicine and close patient care.",
-        "mission.title":"Mission","mission.text":"Provide comprehensive, preventive medical care focused on each patient's health and wellbeing.",
-        "vision.title":"Vision","vision.text":"To be a model of medical excellence in the western area of Puerto Rico.",
-        "values.title":"Values","values.text":"Respect, empathy, ethics, commitment and professionalism in every consultation.",
-        "services.title":"Medical Services",
-        "service.primary.title":"Primary Care","service.primary.desc":"Comprehensive family health assessment and chronic condition management.",
-        "service.surgery.title":"Minor Surgery","service.surgery.desc":"Simple outpatient procedures with modern technology and full sterilization.",
-        "service.tele.title":"Telemedicine","service.tele.desc":"Secure medical consultations from home via video or phone.",
-        "service.certs.title":"Medical Certificates","service.certs.desc":"Health, marriage and driver's license certificates.",
-        "service.weight.title":"Weight Management","service.weight.desc":"Medical and nutritional advice for a healthy lifestyle. We work with GLP1 and GIP",
-        "service.home.title":"Home Visits","service.home.desc":"Personalized care in the comfort of your residence.",
-        "hours.title":"🕒 Opening Hours","hours.desc":"Visit us during our regular hours. Teleconsultations available by appointment.",
-        "hours.monthu":"<strong>Mon–Thu:</strong> 8:00 am — 4:00 pm","hours.fri":"<strong>Friday:</strong> 8:00 am — 3:00 pm","hours.sat":"<strong>Saturday:</strong> 8:00 am — 12:00 pm",
-        "payments.title":"💳 Payment Methods","payments.desc":"We accept most health plans, including Plan Vital. Please verify coverage with us.",
-        "payment.cash.title":"Cash","payment.cash.desc":"Payments at the office.",
-        "payment.transfer.title":"Transfers","payment.transfer.desc":"ATH Móvil and Zelle available.",
-        "payment.card.title":"Cards","payment.card.desc":"Visa, MasterCard, American Express and Discover.",
-        "gallery.title":"Our Facilities",
-        "gallery.alt1":"Reception","gallery.alt2":"Waiting Room","gallery.alt3":"Consultation Area","gallery.alt4":"Procedure Area","gallery.alt5":"Facade","gallery.alt6":"Administrative Area",
-        "team.title":"Our Team","team.desc":"Professionals committed to humane, high-quality care for the whole family.",
-        "role.doctor":"General Doctor","role.nurse":"RN, BSN","role.admin":"Administrative Assistant",
-        "contact.title":"Contact","contact.desc":"Book your appointment or send us your inquiry. We typically reply within 24 business hours.",
-        "contact.infoTitle":"Information","contact.address":"Golden Plaza #3","contact.addressLine":"Carretera 402 KM 2.1, Bo. Marías, Añasco, PR",
-        "contact.phone":"+1 (939) 699-6336","contact.phoneNote":"Calls & SMS","contact.email":"adalbertoechevarriamd@gmail.com","contact.emailNote":"Email for documents",
-        "form.name":"Name","form.phone":"Phone","form.email":"Email","form.message":"Message","form.submit":"Send message",
-        "footer.copy":"© 2025 Dr. Adalberto Echevarría Feliciano Clinic","footer.facebook":"Facebook",
-        "contact.consent":"I consent to store my submitted information.",
-        "contact.privacy":"By submitting, you agree that we may contact you through the indicated channels. We do not share your data."
-      }
-    };
-
-    function apply(lang) {
-      document.documentElement.lang = lang;
-      if (translations[lang] && translations[lang]['meta.title']) {
-        document.title = translations[lang]['meta.title'];
-      }
-
-      document.querySelectorAll('[data-i18n]').forEach(el => {
-        const key = el.getAttribute('data-i18n');
-        if (!key) return;
-        const txt = translations[lang] && translations[lang][key];
-        if (txt !== undefined) el.innerHTML = txt;
-      });
-
-      document.querySelectorAll('[data-i18n-alt]').forEach(el => {
-        const key = el.getAttribute('data-i18n-alt');
-        const txt = translations[lang] && translations[lang][key];
-        if (txt !== undefined) el.setAttribute('alt', txt);
-      });
-
-      document.querySelectorAll('[data-i18n-placeholder]').forEach(inp => {
-        const key = inp.getAttribute('data-i18n-placeholder');
-        const txt = translations[lang] && translations[lang][key];
-        if (txt !== undefined) inp.setAttribute('placeholder', txt);
-      });
-
-      // labels (by for=)
-      const nameLabel = document.querySelector('label[for="nombre"]');
-      if (nameLabel) nameLabel.textContent = translations[lang]['form.name'] || nameLabel.textContent;
-      const phoneLabel = document.querySelector('label[for="telefono"]');
-      if (phoneLabel) phoneLabel.textContent = translations[lang]['form.phone'] || phoneLabel.textContent;
-      const emailLabel = document.querySelector('label[for="email"]');
-      if (emailLabel) emailLabel.textContent = translations[lang]['form.email'] || emailLabel.textContent;
-      const messageLabel = document.querySelector('label[for="mensaje"]');
-      if (messageLabel) messageLabel.textContent = translations[lang]['form.message'] || messageLabel.textContent;
-
-      document.querySelectorAll('button[type="submit"]').forEach(btn => {
-        const key = btn.getAttribute('data-i18n') || 'form.submit';
-        const txt = translations[lang] && translations[lang][key];
-        if (txt !== undefined) btn.textContent = txt;
-      });
-
-      localStorage.setItem('site_lang', lang);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const select = document.getElementById('lang-select');
-      const saved = localStorage.getItem('site_lang') || 'es'; // por defecto español
-      if (select) {
-        select.value = saved;
-        select.addEventListener('change', (e) => {
-          apply(e.target.value);
-        });
-      }
-      apply(saved);
-    });
-  })();
-</script>
-
-<style>
-  .swiper-slide img {
-    width: 100%;
-    height: 320px;
-    object-fit: cover;
-    border-radius: 1rem;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-    transition: transform 0.3s ease;
-  }
-
-  .swiper-slide img:hover {
-    transform: scale(1.05);
-  }
-
-  .swiper-button-next,
-  .swiper-button-prev {
-    color: #1e3a8a; /* Azul */
-  }
-
-  .swiper-pagination-bullet-active {
-    background: #1e3a8a;
-  }
-</style>
-
 
   <!-- EQUIPO -->
   <section id="equipo" class="py-20 bg-blue-50">
@@ -562,8 +339,7 @@
         rel="noopener noreferrer"
         aria-label="Visitar página de Facebook - se abre en nueva pestaña"
         title="Visitar página de Facebook"
-        class="inline-flex items-center gap-2 px-3 py-1 rounded-md hover:bg-white/10 transition"
-      >
+        class="inline-flex items-center gap-2 px-3 py-1 rounded-md hover:bg-white/10 transition">
         <!-- Facebook SVG icon -->
         <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
           <path d="M22 12a10 10 0 10-11.5 9.9v-7H8.9v-2.9h1.6V9.4c0-1.6.95-2.5 2.4-2.5.7 0 1.4.05 1.9.1v2.2h-1.1c-1.1 0-1.4.66-1.4 1.3v1.6h2.4l-.38 2.9h-2.02v7A10 10 0 0022 12z"/>
@@ -572,5 +348,7 @@
       </a>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
