--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dr. Adalberto Echevarría Feliciano | Clínica Médica en Añasco</title>
+  <title>AEF Primary Care | Clínica Médica en Añasco</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -23,7 +23,7 @@
   <!-- NAVBAR -->
   <header class="fixed top-0 left-0 w-full bg-white/80 backdrop-blur-md shadow-sm z-50">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold text-blue-800">Dr. Echevarría Feliciano</h1>
+      <h1 class="text-xl font-bold text-blue-800">AEF Primary Care</h1>
       <nav class="hidden md:flex gap-6 text-sm text-gray-700">
         <a href="#inicio" data-i18n="nav.home" class="hover:text-blue-600">Inicio</a>
         <a href="#sobre" data-i18n="nav.about" class="hover:text-blue-600">Sobre</a>
@@ -117,6 +117,89 @@
     </div>
   </section>
 
+  <!-- SUEROTERAPIA (mejorada: textos traducibles) -->
+  <section id="suero-terapia" class="py-16 bg-white text-gray-800">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="rounded-2xl overflow-hidden">
+        <div class="p-8 sm:p-10 md:p-16">
+          <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-4" data-i18n="suero.title">Sueroterapia</h2>
+          <p class="text-center max-w-3xl mx-auto mb-8 text-sm sm:text-base text-gray-600" data-i18n="suero.desc">
+            Rehidrata tu cuerpo, fortalece tu sistema inmunológico y mejora tu bienestar general con nuestros tratamientos personalizados.
+          </p>
+
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.vitc.title">Vitamina C</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.vitc.desc">Refuerza tu sistema inmune y combate el cansancio.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.inner.title">Inner Beauty</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.inner.desc">Hidrata tu piel y mejora la apariencia del cabello y las uñas.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.sport.title">Sport Performance</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.sport.desc">Optimiza tu rendimiento físico y acelera la recuperación muscular.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.weight.title">Weight Loss</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.weight.desc">Apoya tu metabolismo y ayuda en el proceso de pérdida de peso.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.immune.title">Immune Boost</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.immune.desc">Fortalece tus defensas naturales contra enfermedades.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.energy.title">Boost de Energía</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.energy.desc">Combate el cansancio y mejora tu enfoque diario.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.antiinf.title">Antiinflamatorio</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.antiinf.desc">Reduce la inflamación y promueve la recuperación celular.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.nad.title">NAD+</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.nad.desc">Estimula la energía celular y retrasa el envejecimiento.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.hangover.title">Hangover Relief</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.hangover.desc">Rehidrata tu cuerpo y alivia los síntomas de la resaca.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.libido.title">Libido Booster</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.libido.desc">Mejora el deseo sexual y el equilibrio hormonal.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.postop.title">Post Operatorio</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.postop.desc">Favorece la recuperación y reduce la inflamación post cirugía.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.antiage.title">Anti Envejecimiento</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.antiage.desc">Restaura la vitalidad y promueve una apariencia más joven.</p>
+            </div>
+
+            <div class="bg-gray-50 p-5 sm:p-6 rounded-lg shadow-sm text-center">
+              <h3 class="font-semibold text-lg sm:text-xl mb-1" data-i18n="suero.myers.title">Cóctel de Myers</h3>
+              <p class="text-sm text-gray-600" data-i18n="suero.myers.desc">Una mezcla completa de vitaminas y minerales esenciales.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section class="max-w-6xl mx-auto px-6 py-12">
     <div class="grid md:grid-cols-2 gap-8">
 
@@ -162,12 +245,9 @@
     <div class="swiper myGallery">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="images/oficina8.jpg" alt="Recepción"></div>
-        <div class="swiper-slide"><img src="images/oficina2.jpg" alt="Sala de Espera"></div>
         <div class="swiper-slide"><img src="images/oficina3.jpg" alt="Área de Consulta"></div>
         <div class="swiper-slide"><img src="images/oficina4.jpg" alt="Área de Procedimientos"></div>
-        <div class="swiper-slide"><img src="images/oficina5.jpg" alt="Fachada"></div>
         <div class="swiper-slide"><img src="images/oficina6.jpg" alt="Área Administrativa"></div>
-        <div class="swiper-slide"><img src="images/oficina9.jpg" alt="Recepción"></div>
         <div class="swiper-slide"><img src="images/oficina10.jpg" alt="Sala de Espera"></div>
         <div class="swiper-slide"><img src="images/oficina12.jpg" alt="Área de Consulta"></div>
         <div class="swiper-slide"><img src="images/oficina14.jpg" alt="Área de Procedimientos"></div>
@@ -220,15 +300,15 @@
     </div>
   </section>
 
-  <!-- CONTACTO (reasignado y organizado) -->
+  <!-- CONTACTO: solo INFO + MAPA (mobile: info → mapa ; md+: info | mapa) -->
   <section id="contacto" class="py-20 bg-white text-gray-800">
     <div class="max-w-6xl mx-auto px-6">
       <h3 class="text-3xl font-semibold text-blue-900 mb-6 text-center" data-i18n="contact.title">Contacto</h3>
-      <p class="text-center text-gray-600 max-w-2xl mx-auto mb-10" data-i18n="contact.desc">Agenda tu cita o envíanos tu consulta. Respuesta en menos de 24 horas laborables.</p>
+      <p class="text-center text-gray-600 max-w-2xl mx-auto mb-10" data-i18n="contact.desc">Contáctanos para agendar tu cita</p>
 
-      <div class="grid md:grid-cols-2 gap-8 items-start">
-        <!-- PANEL IZQUIERDO: INFO + MAPA -->
-        <div class="space-y-6">
+      <div class="grid gap-8 items-start md:grid-cols-2">
+        <!-- INFO (DOM primero) -->
+        <div class="space-y-6 md:col-start-1">
           <div class="bg-blue-50 border border-blue-100 rounded-2xl p-6 shadow-sm">
             <h4 class="text-xl font-semibold text-blue-900 mb-2" data-i18n="contact.infoTitle">Información</h4>
 
@@ -257,74 +337,23 @@
             </div>
 
             <div class="mt-4 flex gap-3">
-              <a href="tel:+19396996336" class="inline-flex items-center gap-2 bg-blue-900 text-white px-4 py-2 rounded-lg shadow-sm hover:bg-blue-800" data-i18n="call">
-                📞 Llamar
-              </a>
-              <a href="https://wa.me/19396996336" target="_blank" rel="noopener" class="inline-flex items-center gap-2 border border-blue-100 text-blue-800 px-4 py-2 rounded-lg hover:bg-blue-50">
-                💬 WhatsApp
-              </a>
+              <a href="tel:+19396996336" class="inline-flex items-center gap-2 bg-blue-900 text-white px-4 py-2 rounded-lg shadow-sm hover:bg-blue-800" data-i18n="call">📞 Llamar</a>
+              <a href="https://wa.me/19396996336" target="_blank" rel="noopener" class="inline-flex items-center gap-2 border border-blue-100 text-blue-800 px-4 py-2 rounded-lg hover:bg-blue-50">💬 WhatsApp</a>
             </div>
-          </div>
-
-          <div class="rounded-2xl overflow-hidden border border-gray-100 shadow-sm">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3788.0990277979363!2d-67.14564268833911!3d18.297078975889228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c02b1003b772b93%3A0xff8082d9ff528728!2sDr.%20Adalberto%20Echevarr%C3%ADa%20Feliciano!5e0!3m2!1sen!2sus!4v1762201036457!5m2!1sen!2sus=embed"
-              class="w-full h-56 md:h-64 border-0" loading="lazy" title="Mapa - Golden Plaza Añasco"></iframe>
           </div>
         </div>
 
-        <!-- PANEL DERECHO: FORMULARIO -->
-        <form class="bg-white border border-gray-100 rounded-2xl p-6 shadow-sm" action="#" method="post" novalidate>
-          <h4 class="text-lg font-semibold text-blue-900 mb-4" data-i18n="form.title">Enviar Mensaje</h4>
-
-          <div class="grid sm:grid-cols-2 gap-3">
-            <div>
-              <label for="nombre" class="text-sm font-medium text-gray-700" data-i18n="form.name">Nombre</label>
-              <input id="nombre" name="nombre" required type="text" data-i18n-placeholder="form.name" placeholder="Tu nombre" class="mt-1 w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500" />
-            </div>
-
-            <div>
-              <label for="telefono" class="text-sm font-medium text-gray-700" data-i18n="form.phone">Teléfono</label>
-              <input id="telefono" name="telefono" type="tel" data-i18n-placeholder="form.phone" placeholder="(939) 699-6336" class="mt-1 w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500" />
-            </div>
+        <!-- MAPA (DOM segundo) -->
+        <div class="md:col-start-2">
+          <div class="rounded-2xl overflow-hidden border border-gray-100 shadow-sm">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3788.0990277979363!2d-67.14564268833911!3d18.297078975889228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c02b1003b772b93%3A0xff8082d9ff528728!2sDr.%20Adalberto%20Echevarr%C3%ADa%20Feliciano!5e0!3m2!1sen!2sus!4v1762201036457!5m2!1sen!2sus=embed"
+              class="w-full h-56 md:h-64 border-0"
+              loading="lazy"
+              title="Mapa - Golden Plaza Añasco"
+            ></iframe>
           </div>
-
-          <div class="mt-3">
-            <label for="email" class="text-sm font-medium text-gray-700" data-i18n="form.email">Correo electrónico</label>
-            <input id="email" name="email" required type="email" data-i18n-placeholder="form.email" placeholder="ejemplo@correo.com" class="mt-1 w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500" />
-          </div>
-
-          <div class="mt-3">
-            <label for="mensaje" class="text-sm font-medium text-gray-700" data-i18n="form.message">Mensaje</label>
-            <textarea id="mensaje" name="mensaje" rows="5" data-i18n-placeholder="form.message" placeholder="Describe brevemente tu consulta" class="mt-1 w-full border rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-sky-500"></textarea>
-          </div>
-
-          <fieldset class="mt-3">
-            <legend class="text-sm font-medium text-gray-700" data-i18n="contact.pref.legend">Prefieres ser contactado por</legend>
-            <div class="flex gap-4 mt-2 text-sm">
-              <label class="inline-flex items-center gap-2">
-                <input type="radio" name="contacto_pref" value="telefono" class="form-radio" checked>
-                <span data-i18n="contact.pref.phone">Teléfono</span>
-              </label>
-              <label class="inline-flex items-center gap-2">
-                <input type="radio" name="contacto_pref" value="whatsapp" class="form-radio">
-                <span data-i18n="contact.pref.whatsapp">WhatsApp</span>
-              </label>
-              <label class="inline-flex items-center gap-2">
-                <input type="radio" name="contacto_pref" value="email" class="form-radio">
-                <span data-i18n="contact.pref.email">Correo</span>
-              </label>
-            </div>
-          </fieldset>
-
-          <label class="inline-flex items-center mt-4 text-sm">
-            <input type="checkbox" name="consent" class="form-checkbox h-4 w-4 text-sky-600 rounded" />
-            <span class="ml-2 text-sm text-gray-600" data-i18n="contact.consent">Autorizo el uso de mis datos para gestionar la cita</span>
-          </label>
-
-          <button type="submit" class="mt-4 w-full bg-blue-900 text-white px-4 py-3 rounded-lg font-medium hover:bg-blue-800 transition" data-i18n="form.submit">Enviar mensaje</button>
-
-          <p class="text-xs text-gray-500 mt-3" data-i18n="contact.privacy">Al enviar aceptas que nos comuniquemos por los medios indicados. No compartimos tus datos.</p>
-        </form>
+        </div>
       </div>
     </div>
   </section>
