--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <div class="bg-white p-6 rounded-2xl shadow flex flex-col items-center">
           <img src="images/Personal/individual1.jpg" alt="Dra. Frances L. Vélez" class="w-28 h-28 object-cover rounded-full mb-4">
           <h4 class="font-semibold text-blue-800 text-center">Dra. Frances L. Vélez</h4>
-          <p class="text-sm text-gray-600 text-center" data-i18n="role.doctor">Médico General</p>
+          <p class="text-sm text-gray-600 text-center" data-i18n="role.pa">PA</p>
         </div>
 
         <div class="bg-white p-6 rounded-2xl shadow flex flex-col items-center">
@@ -324,7 +324,7 @@
               <div class="text-2xl">📞</div>
               <div>
                 <a href="tel:+19396996336" class="font-medium text-blue-800" data-i18n="contact.phone">+1 (939) 699-6336</a>
-                <div class="text-sm text-gray-600" data-i18n="contact.phoneNote">Llamadas y SMS</div>
+                <div class="text-sm text-gray-600" data-i18n="contact.phoneNote">Llamadas</div>
               </div>
             </div>
 
@@ -332,13 +332,13 @@
               <div class="text-2xl">📧</div>
               <div>
                 <a href="mailto:adalbertoechevarriamd@gmail.com" class="font-medium text-blue-800" data-i18n="contact.email">adalbertoechevarriamd@gmail.com</a>
-                <div class="text-sm text-gray-600" data-i18n="contact.emailNote">Correo para documentos</div>
+                <div class="text-sm text-gray-600" data-i18n="contact.emailNote">Correo </div>
               </div>
             </div>
 
             <div class="mt-4 flex gap-3">
               <a href="tel:+19396996336" class="inline-flex items-center gap-2 bg-blue-900 text-white px-4 py-2 rounded-lg shadow-sm hover:bg-blue-800" data-i18n="call">📞 Llamar</a>
-              <a href="https://wa.me/19396996336" target="_blank" rel="noopener" class="inline-flex items-center gap-2 border border-blue-100 text-blue-800 px-4 py-2 rounded-lg hover:bg-blue-50">💬 WhatsApp</a>
+              <a href="https://wa.me/19393195343" target="_blank" rel="noopener" class="inline-flex items-center gap-2 border border-blue-100 text-blue-800 px-4 py-2 rounded-lg hover:bg-blue-50">💬 WhatsApp</a>
             </div>
           </div>
         </div>
