--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
 
         <div class="bg-white p-6 rounded-2xl shadow flex flex-col items-center">
-          <img src="images/Personal/individual2.jpg" alt="Ada Echevarría" class="w-28 h-28 object-cover rounded-full mb-4">
+          <img src="images/Personal/fotoadmin.jpeg" alt="Ada Echevarría" class="w-28 h-28 object-cover rounded-full mb-4">
           <h4 class="font-semibold text-blue-800 text-center">Ada Echevarría</h4>
           <p class="text-sm text-gray-600 text-center" data-i18n="role.admin">Asistente Administrativo</p>
         </div>
