--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <meta name="google-site-verification" content="yh2_IM1wbbXFXnhvW_6xIMXPR5FxMPzMj7HAtIvZ9bo" />
 </head>
 
 
