--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AEF Primary Care | Clínica Médica en Añasco</title>
+
+  <!-- SEO -->
+  <meta name="description" 
+        content="AEF Primary Care es una clínica médica en Añasco que ofrece medicina primaria, cirugía menor, telemedicina, control de peso, certificados médicos, visitas al hogar y sueroterapia. Atención empática, profesional y centrada en tu bienestar.">
+  
+  <meta name="keywords" 
+        content="clínica médica Añasco, medicina primaria Añasco, Dr. Adalberto Echevarría, sueroterapia Puerto Rico, GLP-1 Añasco, medicina preventiva PR, telemedicina Puerto Rico, certificados médicos Añasco, control de peso Añasco, visitas al hogar médico, clínica en Puerto Rico, médico general Añasco, cirugía menor Añasco, clínica primaria care, clínica Golden Plaza Añasco, atención médica Añasco, AEF Primary Care, servicios médicos en Añasco, wellness Puerto Rico, servicios de salud oeste PR">
+
+  <meta name="author" content="AEF Primary Care - Clínica Médica en Añasco">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="Spanish">
+  <meta name="revisit-after" content="7 days">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="AEF Primary Care | Clínica Médica en Añasco">
+  <meta property="og:description" content="Medicina primaria, preventiva, cirugía menor, sueroterapia, control de peso y más en Añasco, PR. Atención humana y profesional.">
+  <meta property="og:image" content="images/oficina8.jpg">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://dradalbertoechevarria.com/">
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -12,12 +32,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <!-- Icon -->
-  <link rel="icon" href="doctor-icon.png">
+  <link rel="icon" href="images/oficina3.jpg" type="image/jpeg">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Google Verification -->
   <meta name="google-site-verification" content="yh2_IM1wbbXFXnhvW_6xIMXPR5FxMPzMj7HAtIvZ9bo" />
 </head>
+
 
 
 <body class="bg-gray-50 text-gray-800 font-sans">
