--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="AEF Primary Care es una clínica médica en Añasco que ofrece medicina primaria, cirugía menor, telemedicina, control de peso, certificados médicos, visitas al hogar y sueroterapia. Atención empática, profesional y centrada en tu bienestar.">
   
   <meta name="keywords" 
-        content="clínica médica Añasco, medicina primaria Añasco, Dr. Adalberto Echevarría, sueroterapia Puerto Rico, GLP-1 Añasco, medicina preventiva PR, telemedicina Puerto Rico, certificados médicos Añasco, control de peso Añasco, visitas al hogar médico, clínica en Puerto Rico, médico general Añasco, cirugía menor Añasco, clínica primaria care, clínica Golden Plaza Añasco, atención médica Añasco, AEF Primary Care, servicios médicos en Añasco, wellness Puerto Rico, servicios de salud oeste PR">
+        content="clínica médica Añasco, medicina primaria Añasco, Dr. Adalberto Echevarría, sueroterapia Puerto Rico, GLP-1 Añasco, medicina preventiva PR, telemedicina Puerto Rico, certificados médicos Añasco, control de peso Añasco, visitas al hogar médico, clínica en Puerto Rico, médico general Añasco, cirugía menor Añasco, clínica primaria care, clínica Golden Plaza Añasco, atención médica Añasco, AEF Primary Care, servicios médicos en Añasco, wellness Puerto Rico, servicios de salud oeste PR, NAD">
 
   <meta name="author" content="AEF Primary Care - Clínica Médica en Añasco">
   <meta name="robots" content="index, follow">
